--- a/src/View/sample.fxml
+++ b/src/View/sample.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane onKeyPressed="#KeyPressed" onScroll="#zooming" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ViewModel.MyViewModel">
+<BorderPane fx:id="board" onKeyPressed="#KeyPressed" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ViewModel.MyViewModel">
     <left>
         <VBox prefHeight="200.0" prefWidth="178.0" spacing="5.0" BorderPane.alignment="CENTER">
             <children>
@@ -35,13 +35,13 @@
                     </rowConstraints>
                     <Label text="Maze rows:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
                     <Label text="Maze columns:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                    <TextField fx:id="txtfld_rowsNum" disable="false" text="50" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-                    <TextField fx:id="txtfld_columnsNum" disable="false" text="50" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                    <Button cancelButton="true" onAction="#solveMaze" prefHeight="25.0" prefWidth="167.0" text="Solve Maze" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+                    <TextField fx:id="txtfld_rowsNum" disable="false" onKeyPressed="#setRows" text="50" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                    <TextField fx:id="txtfld_columnsNum" disable="false" onKeyPressed="#setCols" text="50" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                    <Button fx:id="solve_button" cancelButton="true" disable="true" onAction="#solveMaze" prefHeight="25.0" prefWidth="167.0" text="Solve Maze" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="8" />
                     <Label text="Char row:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
                     <Label text="Char column:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-                    <Label text="${controller.characterRow}" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                    <Label text="${controller.characterColumn}" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                    <Label fx:id="Char_row" prefHeight="17.0" prefWidth="19.0" text="${controller.characterRow}" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                    <Label fx:id="Char_column" prefHeight="17.0" prefWidth="21.0" text="${controller.characterColumn}" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                 </GridPane>
             </children>
             <padding>
@@ -68,25 +68,30 @@
                         <MenuItem mnemonicParsing="false" onAction="#load" text="Load" />
                             </items>
                         </Menu>
-                        <Menu mnemonicParsing="false" text="Edit">
+                        <Menu mnemonicParsing="false" text="Options">
                             <items>
-                                <MenuItem mnemonicParsing="false" text="Delete" />
+                                <MenuItem mnemonicParsing="false" text="Properties" />
                             </items>
                         </Menu>
-                        <Menu mnemonicParsing="false" text="Help">
-                            <items>
-                                <MenuItem mnemonicParsing="false" text="About" />
-                            </items>
-                        </Menu>
+                        <Menu mnemonicParsing="false" text="Exit">
+                     <items>
+                        <MenuItem mnemonicParsing="false" onAction="#exit" text="Exit Game" />
+                     </items></Menu>
+                  <Menu mnemonicParsing="false" text="Help" />
+                  <Menu mnemonicParsing="false" text="About">
+                     <items>
+                        <MenuItem mnemonicParsing="false" onAction="#aboutTheProgrammers" text="About the programmers" />
+                        <MenuItem mnemonicParsing="false" onAction="#aboutTheAlgorithms" text="About the algorithms" />
+                     </items></Menu>
                     </menus>
                 </MenuBar>
             </children>
         </VBox>
     </top>
     <center>
-        <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" BorderPane.alignment="CENTER">
+        <Pane fx:id="mazePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" BorderPane.alignment="CENTER">
             <children>
-                <MazeDisplayer fx:id="mazeDisplayer" height="600.0" imageFileNameCharacter="resources/Images/ben.jpg" imageFileNameWall="resources/Images/ben1.jpg" width="600.0" />
+                <MazeDisplayer fx:id="mazeDisplayer" height="600.0" imageFileNameCharacter="resources/Images/ben.jpg" imageFileNameWall="resources/Images/ben1.jpg" imageFileNameGoal="resources/Images/caramel.jpg" imageFileNameSolve="resources/Images/cream.jpg" onScroll="#zooming" width="600.0" />
             </children>
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
