--- a/src/View/View.fxml
+++ b/src/View/View.fxml
@@ -2,12 +2,15 @@
 
 <?import View.MazeDisplayer?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -16,7 +19,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="board" onKeyPressed="#KeyPressed" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.View">
+<BorderPane fx:id="board" onKeyPressed="#KeyPressed" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.View">
     <left>
         <VBox prefHeight="200.0" prefWidth="178.0" spacing="5.0" BorderPane.alignment="CENTER">
             <children>
@@ -32,16 +35,18 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints />
+                  <RowConstraints />
+                  <RowConstraints />
                     </rowConstraints>
                     <Label text="Maze rows:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
                     <Label text="Maze columns:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
                     <TextField fx:id="txtfld_rowsNum" disable="false" onKeyPressed="#setRows" text="50" GridPane.columnIndex="1" GridPane.rowIndex="0" />
                     <TextField fx:id="txtfld_columnsNum" disable="false" onKeyPressed="#setCols" text="50" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                    <Button fx:id="solve_button" cancelButton="true" disable="true" onAction="#solveMaze" prefHeight="25.0" prefWidth="167.0" text="Solve Maze" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="8" />
-                    <Label text="Char row:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-                    <Label text="Char column:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-                    <Label fx:id="Char_row" prefHeight="17.0" prefWidth="19.0" text="${controller.characterRow}" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                    <Label fx:id="Char_column" prefHeight="17.0" prefWidth="21.0" text="${controller.characterColumn}" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                    <Button fx:id="solve_button" cancelButton="true" disable="true" onAction="#solveMaze" prefHeight="25.0" prefWidth="167.0" text="Show/Hide Solution" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="8" />
+                    <Button fx:id="hint_button" cancelButton="true" disable="true" onAction="#getHint" prefHeight="25.0" prefWidth="167.0" text="getHint" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="9" />
+                    <Label fx:id="Char_row" text="Char row:" prefHeight="17.0" prefWidth="19.0" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                    <Label fx:id="Char_column" text="Char column:" prefHeight="17.0" prefWidth="21.0" GridPane.columnIndex="0" GridPane.rowIndex="5" />
                 </GridPane>
             </children>
             <padding>
@@ -65,7 +70,7 @@
                             <items>
                         <MenuItem fx:id="newFile" mnemonicParsing="false" onAction="#generateMaze" text="New" />
                                 <MenuItem mnemonicParsing="false" onAction="#save" text="Save" />
-                        <MenuItem mnemonicParsing="false" onAction="#load" text="Load" />
+                        <MenuItem fx:id="load" mnemonicParsing="false" onAction="#load" text="Load" />
                             </items>
                         </Menu>
                         <Menu mnemonicParsing="false" text="Options">
@@ -89,13 +94,9 @@
         </VBox>
     </top>
     <center>
-        <Pane fx:id="mazePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" BorderPane.alignment="CENTER">
-            <children>
-                <MazeDisplayer fx:id="mazeDisplayer" height="600.0" imageFileNameCharacter="resources/Images/ben.jpg" imageFileNameWall="resources/Images/ben1.jpg" imageFileNameGoal="resources/Images/caramel.jpg" imageFileNameSolve="resources/Images/cream.jpg" onScroll="#zooming" width="600.0" />
-            </children>
-            <padding>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-            </padding>
-        </Pane>
+        <MazeDisplayer fx:id="mazeDisplayer" height="-Infinity" width="-Infinity" imageFileNameCharacter="resources/Images/alMarket.jpg" imageFileNameGoal="resources/Images/light.jpg" imageFileNameHint="resources/Images/abu.jpg" imageFileNameSolve="resources/Images/flying.jpg" imageFileNameWall="resources/Images/cave.jpg" onScroll="#zooming"  BorderPane.alignment="CENTER">
+            <BorderPane.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            </BorderPane.margin></MazeDisplayer>
     </center>
 </BorderPane>
