--- a/src/View/style.css
+++ b/src/View/style.css
@@ -1,11 +1,12 @@
 .root{
     -fx-background-color: powderblue;
+    -fx-background-image: url("https://vignette3.wikia.nocookie.net/aladdin/images/5/50/Wiki-background/revision/latest?cb=20120316031621");
+    -fx-background-size: cover;
+
 }
 
 #board{
-    -fx-background-image: url("http://wallpapercave.com/wp/WXvIo5G.jpg");
     -fx-background-repeat: stretch;
-    -fx-background-size: 1400 800;
     -fx-background-position: center center;
     -fx-effect: dropshadow(three-pass-box, black, 30, 0.5, 0, 0);
 }
