--- a/src/View/style.css
+++ b/src/View/style.css
@@ -1,6 +1,6 @@
 .root{
     -fx-background-color: powderblue;
-    -fx-background-image: url("https://vignette3.wikia.nocookie.net/aladdin/images/5/50/Wiki-background/revision/latest?cb=20120316031621");
+    -fx-background-image: url("back.png");
     -fx-background-size: cover;
 
 }
@@ -11,20 +11,52 @@
     -fx-effect: dropshadow(three-pass-box, black, 30, 0.5, 0, 0);
 }
 
-Button {
-    -fx-text-fill: blue;
-    -fx-font-family: "Arial Narrow";
-    -fx-font-weight: bold;
-    -fx-background-color: linear-gradient(#61a2b1, #2A5058);
+
+Button
+{
+    -fx-text-fill: white;
     -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+    -fx-font-family: "Gisha";
+    -fx-wrap-text: true;
+    -fx-font-size: 18px;
+    -fx-font-weight: bold;
+    -fx-background-image: url("abu.jpg");
+    -fx-background-radius: 16.4, 15;
+    -fx-background-insets: -1.4, 0;
+    -fx-border-radius: 2;
+    -fx-border-width: 2;
+    -fx-background-size: 150 150;
+    -fx-background-position: center center;
 }
+
+
 
 Button:hover{
     -fx-background-color: -fx-shadow-highlight-color, -fx-outer-border, -fx-inner-border, -fx-body-color;
-    -fx-background-insets: 0 0 -1 0, 0, 1, 2;
-    -fx-background-radius: 3px, 3px, 2px, 1px;
-    -fx-padding: 0.333333em 0.666667em 0.333333em 0.666667em; /* 4 8 4 8 */
-    -fx-text-fill: -fx-text-base-color;
+    -fx-text-fill: cornflowerblue;
     -fx-alignment: CENTER;
     -fx-content-display: LEFT;
+}
+
+RadioButton{
+    -fx-text-fill: white;
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+    -fx-font-family: "Gisha";
+    -fx-wrap-text: true;
+    -fx-font-size: 18px;
+    -fx-font-weight: bold;
+    -fx-background-image: url("jaf.png");
+    -fx-background-radius: 16.4, 15;
+    -fx-background-insets: -1.4, 0;
+    -fx-border-radius: 2;
+    -fx-border-width: 2;
+    -fx-background-size: 150 150;
+    -fx-background-position: center center;
+}
+RadioButton:hover{
+    -fx-background-color: -fx-shadow-highlight-color, -fx-outer-border, -fx-inner-border, -fx-body-color;
+    -fx-text-fill: cornflowerblue;
+    -fx-alignment: CENTER;
+    -fx-content-display: LEFT;
+
 }
